Added html structure with content

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <title>Frontend Mentor | Single price grid component</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
+    <div>
+      <section>
+        <h1>Join our community</h1>
+        <p>30-day, hassle-free money back guarantee</p>
+        <p>
+          Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who
+          are serious about honing their skills.
+        </p>
+      </section>
+      <section>
+        <h2>Monthly Subscription</h2>
+        <p>&dollar;29 per month</p>
+        <p>Full access for less than &dollar;1 a day</p>
+        <button>Sign Up</button>
+      </section>
+      <section>
+        <h2>Why Us</h2>
+        <p>Tutorials by industry experts</p>
+        <p>Peer &amp; expert code review</p>
+        <p>Coding exercises</p>
+        <p>Access to our GitHub repos</p>
+        <p>Community forum</p>
+        <p>Flashcard decks</p>
+        <p>New videos every week</p>
+      </section>
+    </div>
   </body>
 </html>
