Added classes in BEM metology

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,31 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Single price grid component</title>
   </head>
-  <body>
-    <div>
-      <section>
-        <h1>Join our community</h1>
-        <p>30-day, hassle-free money back guarantee</p>
-        <p>
+  <body class="body">
+    <div class="grid">
+      <section class="first-box">
+        <h1 class="first-box__header">Join our community</h1>
+        <p class="first-box__paragraph">30-day, hassle-free money back guarantee</p>
+        <p class="first-box__paragraph">
           Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who
           are serious about honing their skills.
         </p>
       </section>
-      <section>
-        <h2>Monthly Subscription</h2>
-        <p>&dollar;29 per month</p>
-        <p>Full access for less than &dollar;1 a day</p>
-        <button>Sign Up</button>
+      <section class="second-box">
+        <h2 class="second-box__header">Monthly Subscription</h2>
+        <p class="second-box__paragraph"><span class="second-box__paragraph--bold">&dollar;29</span><span class="second-box__paragraph--transparent"> per month</span></p>
+        <p class="second-box__paragraph">Full access for less than &dollar;1 a day</p>
+        <button class="second-box__button">Sign Up</button>
       </section>
-      <section>
-        <h2>Why Us</h2>
-        <p>Tutorials by industry experts</p>
-        <p>Peer &amp; expert code review</p>
-        <p>Coding exercises</p>
-        <p>Access to our GitHub repos</p>
-        <p>Community forum</p>
-        <p>Flashcard decks</p>
-        <p>New videos every week</p>
+      <section class="third-box">
+        <h2 class="third-box__header">Why Us</h2>
+        <p class="third-box__paragraph">Tutorials by industry experts</p>
+        <p class="third-box__paragraph">Peer &amp; expert code review</p>
+        <p class="third-box__paragraph">Coding exercises</p>
+        <p class="third-box__paragraph">Access to our GitHub repos</p>
+        <p class="third-box__paragraph">Community forum</p>
+        <p class="third-box__paragraph">Flashcard decks</p>
+        <p class="third-box__paragraph">New videos every week</p>
       </section>
     </div>
   </body>
