--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,21 +7,21 @@
   </head>
   <body class="body">
     <div class="grid">
-      <section class="first-box">
+      <section class="first-box box">
         <h1 class="first-box__header">Join our community</h1>
-        <p class="first-box__paragraph">30-day, hassle-free money back guarantee</p>
-        <p class="first-box__paragraph">
+        <p class="first-box__paragraph-yellow"><strong>30-day, hassle-free money back guarantee</strong></p>
+        <p class="first-box__paragraph-gray">
           Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who
           are serious about honing their skills.
         </p>
       </section>
-      <section class="second-box">
+      <section class="second-box box">
         <h2 class="second-box__header">Monthly Subscription</h2>
         <p class="second-box__paragraph"><span class="second-box__paragraph--bold">&dollar;29</span><span class="second-box__paragraph--transparent"> per month</span></p>
         <p class="second-box__paragraph">Full access for less than &dollar;1 a day</p>
         <button class="second-box__button">Sign Up</button>
       </section>
-      <section class="third-box">
+      <section class="third-box box">
         <h2 class="third-box__header">Why Us</h2>
         <p class="third-box__paragraph">Tutorials by industry experts</p>
         <p class="third-box__paragraph">Peer &amp; expert code review</p>
