--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,8 +18,8 @@
       <section class="second-box box">
         <h2 class="second-box__header">Monthly Subscription</h2>
         <p class="second-box__paragraph">
-          <span class="second-box__paragraph--bold">&dollar;29</span
-          ><span class="second-box__paragraph--transparent"> per month</span>
+          <span class="second-box__paragraph--bold">&dollar;29</span>
+          <span class="second-box__paragraph--transparent"> per month</span>
         </p>
         <p class="second-box__paragraph">Full access for less than &dollar;1 a day</p>
         <button class="second-box__button">Sign Up</button>
